# mystiko-cli

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
publish/: install.sh  publish_binary.py  publish_index.py  publish_script.py
src/: about.rs  error.rs  lib.rs  main.rs
src/args/: account.rs  deposit.rs  mod.rs  scanner.rs  spend.rs  synchronizer.rs  wallet.rs
src/executor/: account.rs  deposit.rs  mod.rs  scanner.rs  spend.rs  synchronizer.rs  wallet.rs
tests/: about_tests.rs  account_tests.rs  common.rs  deposit_tests.rs  scanner_tests.rs  spend_tests.rs  synchronizer_tests.rs  wallet_tests.rs
tests/files/: config.json
