[package]
name = "mystiko"
authors = ["Fitch Li <fitch@mystiko.network>"]
description = "The command tool for Mystiko"
homepage = "https://mystiko.network"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
clap = { version = "4.4.7", features = ["derive"] }
dirs = { version = "5.0.1" }
env_logger = { version = "0.10.0" }
futures = { version = "0.3.26" }
log = { version = "0.4.17" }
mystiko_config = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6", features = ["fs"] }
mystiko_core = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6" }
mystiko_protos = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6", default-features = false, features = ["mystiko-common-v1", "mystiko-core-document-v1", "mystiko-core-synchronizer-v1"] }
mystiko_static_cache = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6", features = ["fs"] }
mystiko_storage = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6" }
mystiko_storage_sqlite = { git = "ssh://git@github.com/mystikonetwork/mystiko-rust.git", rev = "7fecba6" }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91" }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.27.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
async-trait = { version = "0.1.64" }
mockall = { version = "0.11.4" }
tempfile = { version = "3.8.1" }
tokio = { version = "1.27.0", features = ["macros", "rt", "test-util"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
